src/core/util.h

#define janet_assert(c, m) do { \
    if (!(c)) JANET_EXIT((m)); \
} while (0)
int32_t janet_array_calchash(const Janet *array, int32_t len);
int32_t janet_string_calchash(const uint8_t *str, int32_t len);
int32_t janet_tablen(int32_t n);
void safe_memcpy(void *dest, const void *src, size_t len);
#define JANET_CORE_FN JANET_FN
#define JANET_CORE_FN JANET_FN_S